--- a/alpha/templates/welcome.html
+++ b/alpha/templates/welcome.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>title</title>
+    <title>{{ title }}</title>
     
     <!-- jQuery -->
     <script src="/static/javascripts/jquery-1.7.1.min.js"></script>
