--- a/stylesheets/loan.less
+++ b/stylesheets/loan.less
@@ -101,6 +101,13 @@ body {
         right:                  0.3em;
         float:                  right;
     }
+    
+    .quantity {
+        position:               absolute;
+        top:                    0.3em;
+        right:                  0.3em;
+        float:                  right;
+    }
 }
 
 .search {
