--- a/static/stylesheets/loan.less
+++ b/static/stylesheets/loan.less
@@ -92,13 +92,16 @@ body {
     border-right:           0.2em solid #BBB;
     padding:                0.75em;
     cursor:                 pointer;
-    
     position:               relative;
     
     .checkbox {
         position:               absolute;
         top:                    0.3em;
         right:                  0.3em;
+        float:                  right;
+    }
+    
+    .quantity {
         float:                  right;
     }
 }
