--- a/static/stylesheets/loan.less
+++ b/static/stylesheets/loan.less
@@ -113,6 +113,25 @@ body {
     input {
         width:                  90%;
     }
+    
+    .batch {
+        width:                  90%;
+        height:                 5em;
+        
+        font-family:            monospace;
+        font-size:              1.6em;
+        font-weight:            bold;
+        background-color:       #EEE;
+        color:                  #000;    
+        
+        border:                 0.1em solid #BBB;
+        border-bottom:          0.2em solid #BBB;
+        border-top:             0.2em solid #BBB;
+        padding:                0.3em;
+        margin:                 0.3em;
+        border-radius:          0.2em;
+        -moz-border-radius:     0.2em;        
+    }
 }
 
 .date {
