--- a/alpha/templates/return.html
+++ b/alpha/templates/return.html
@@ -38,7 +38,7 @@
 
 <div id="presentation">
 
-<form id="loan" action="/loan/return/process/" method="post">{% csrf_token %}
+<form id="loan" action="/return/process/" method="post">{% csrf_token %}
     <div class="slide">
         <div class="header">► Personalia</div>
         
